# vpulse-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  bindings.json  bindings_cs2.json  config.json  graph_red2_template.kv3  icon.xcf
.github/ISSUE_TEMPLATE/: bug_report.md  help-request.md
.github/workflows/: build.yml
bindings/: bindings_cs2.json  bindings_deadlock.json  bindings_manifest.json  bindings_shared.json  enums.json
egui_node_graph2/: Cargo.toml
egui_node_graph2/src/: editor_ui.rs  graph_impls.rs  lib.rs  scale.rs  structs.rs  traits.rs  ui_state.rs
egui_node_graph2_example/: Cargo.toml  graph.vpulse  graph_fmt.vpulse
egui_node_graph2_example/graph_out/: compile.bat  graph.vpulse  graph.vpulse_c  maingraph_red.kv3
egui_node_graph2_example/src/: app.rs  compiler.rs  instruction_templates.rs  lib.rs  main.rs  outputdefinition.rs  pulsetypes.rs  serialization.rs
examples/: entities.ron  entities2.ron  forloop.ron  inputs.ron  radio.ron  remote_nodes_listen_entity_output.ron  timing.ron
graph_out/: gamemanager.vpulse_c  graph.vpulse  graph.vpulse_c  graph2.vpulse_c
pulseedit/: Cargo.toml
pulseedit/graph_out/: graph.vpulse_c
pulseedit/src/: app.rs  compiler.rs  lib.rs  main.rs  pulsetypes.rs
src/: app.rs  bindings.rs  build.rs  compiler.rs  help.rs  instruction_templates.rs  lib.rs  main.rs  outputdefinition.rs  pulsetypes.rs  serialization.rs  typing.rs  utils.rs
src/app/: help.rs  impls.rs  migrations.rs  types.rs
src/compiler/: instruction_templates.rs  nodes.rs  serialization.rs
src/pulsetypes/: cells.rs  (+1 more)
windows/: resources.rc
(+1 files in other folders)
