[package]
name = "pulseedit"
version = "0.1.1"
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.29"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
indoc = "2.0.5"
image = "0.24.3"
slotmap = "1.0.7"
egui-file-dialog = "0.8.0"
rand = "0.8.5"
serde_json = "1.0.137"
egui_node_graph2 = "0.7.0"
rfd = "0.15.2"
ron = "0.8.0"

[features]
default = ["persistence"]
persistence = ["egui_node_graph2/persistence", "eframe/persistence"]

